--- a/welovetour/css/style.css
+++ b/welovetour/css/style.css
@@ -32,7 +32,7 @@ html{ background-color: #000; }
 p.social_box{ float: left; text-align: left; }
 p.social_box a{ width: 30px; height: 30px; margin: 0 1px; display: inline-block; background-color: #d1ab1b;  border-radius: 50%; background-repeat: no-repeat; background-position: center center; background-size: contain;}
 p.social_box a.googlefrom{ background-image:url(../images/icon_social_googlefrom.png);}
-p.social_box a.line{ background-image:url(../images/icon_social_line.png);}
+p.social_box a.line_icon{ background-image:url(../images/icon_social_line.png);}
 p.social_box a.facebook{ background-image:url(../images/icon_social_facebook.png);}
 p.social_box a.youtube{ background-image:url(../images/icon_social_youtube.png);}
 p.social_box a:hover{ background-color: #fff; }
@@ -284,9 +284,9 @@ p.social_box a:hover{ background-color: #fff; }
 .FooterBox p.social_box a:hover{ background-color: #d1ab1b;}
 
 /*fixed right menu*/
-.fixed_go_menu{ position: fixed; right: 5%; top:calc(50% - 257px); z-index: 16; }
+.fixed_go_menu{ position: fixed; right: 5%; bottom:calc(50% - 257px); z-index: 16; }
 .fixed_go_menu p.link{ color: #fff; text-align: center; font-size: 13px; background-color: #927400; border:2px solid #775e00; }
-.fixed_go_menu p.link a{ width:85px; height: 85px; display: block; padding-top: 68%; border-bottom: 2px solid #775e00; position: relative; cursor: pointer; }
+.fixed_go_menu p.link a{ width:85px; height: 85px; color: #fff; display: block; padding-top: 68%; border-bottom: 2px solid #775e00; position: relative; cursor: pointer; }
 .fixed_go_menu p.link a:last-child{ border-bottom: none; }
 .fixed_go_menu p.link a::after{ content: ""; position: absolute; top: 0; left: 0; width: 100%; height: 60px; display: block; background-repeat: no-repeat; background-position: center center; background-size: contain;}
 .fixed_go_menu p.link a:hover{ background-color: #000; }
@@ -310,7 +310,7 @@ p.social_box a:hover{ background-color: #fff; }
 .fixed_bottom_tools ul li p{ font-size: 14px; text-align: center; }
 .fixed_bottom_tools ul li p a{ color: #fff; padding:45px 0 10px 0; display: block;  position: relative;}
 .fixed_bottom_tools ul li p a::after{ position: absolute; top: 5px; left:calc(50% - 18px); content: ""; width:36px; height: 36px; display: block; background-repeat: no-repeat; background-size: contain; }
-.fixed_bottom_tools ul li p a.line::after{ background-image: url(../images/icon_mob_tools_line.png); }
+.fixed_bottom_tools ul li p a.line_icon::after{ background-image: url(../images/icon_mob_tools_line.png); }
 .fixed_bottom_tools ul li p a.google::after{ background-image: url(../images/icon_mob_tools_google.png); }
 .fixed_bottom_tools ul li p a.phone::after{ background-image: url(../images/icon_mob_tools_phone.png); }
 
@@ -418,7 +418,7 @@ p.social_box a:hover{ background-color: #fff; }
 	.Main_Contents p.mob_go_menu, .fixed_bottom_tools{ display: block; }
 	.Main_Contents .travel_price{padding-bottom: 100px;}
 
-	.fixed_go_menu{ top: inherit; bottom: 100px;}
+	.fixed_go_menu{ bottom: 100px;}
 	.fixed_go_menu p.link{ font-size: 11px; background-color: none; border: none; background-color: inherit; }
 	.fixed_go_menu p.link a{ width: 55px; height: 55px; }
 	.fixed_go_menu p.link a::after{ height: 55px; }
